[package]
name = "lti"
version = "0.3.0"
authors = ["Nick Benoit <nick.benoit14@gmail.com>"]
description = "Rust library to support the development of LTI tools and applications."
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ring = "0.16.20"
url = "1.7.2"
base64 = "0.13.0"
serde_urlencoded = "0.7.0"
